--- a/style.css
+++ b/style.css
@@ -6,7 +6,7 @@ body {
 }
 
 form {
-    background-color: #000;
+    background-color: ##000000;
     padding: 20px;
     margin: auto;
     width: 300px;
