--- a/style.css
+++ b/style.css
@@ -2,7 +2,7 @@ body {
     font-family: Arial, sans-serif;
     text-align: center;
     padding: 40px;
-    background-color: #f2f2f2;
+    background-color: #1e0b06;
 }
 
 form {
